--- a/style.css
+++ b/style.css
@@ -38,11 +38,12 @@ path, i, svg {
     position: absolute;
     bottom: 0%;
     background: white;
+    /* opacity: 0; */
     padding: 1rem;
     width: 80%;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
-    pointer-events: none;
+    /* pointer-events: none; */
     /* transform: translateY(100px); */
     transition: all 0.5s ease-in-out;
 }
@@ -98,4 +99,12 @@ path, i, svg {
     background: none;
     cursor: pointer;
     margin: 2rem 0rem;
+}
+input[type="range"] {
+    -webkit-appearance: none;
+    margin: 1rem 0rem;
+    width: 100%;
+    position: relative;
+    border-radius: 1rem;
+    cursor: pointer;
 }
